# electron-ps-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  packages.dhall  scripts.hs  spago.dhall  tailwind.config.js
env/: Dev.purs  Prod.purs
script_modules/: README.md  package.yaml  scripts.cabal  stack.yaml
script_modules/src/: Scripts.hs
script_modules/src/Scripts/: Class.hs  Test.hs  Utils.hs
src/: Components.purs  HTML.purs  Main.purs  Utils.purs  index.html  lib.rs  main.js  preload.js  renderer.js
src/Electron/: IpcCall.js  IpcCall.purs
src/Tailwind/: Tailwind.js  Tailwind.purs
