[package]
name = "electron-ps-rs"
version = "0.1.0"
description = "Example electron app with PureScript and Rust"
authors = ["nathaniel may"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
num_cpus = "1.16.0"
rfd = "0.14.1"
